# LibTorch_Detect

./: .gitignore  CMakeLists.txt  README.md  export_model.py
include/: gst_face_detect.h  inference_manager.h
src/: gst_face_detect.cpp  inference_manager.cpp  main.cpp
